feat: Add callback option to config to capture context when starting transactions and spans

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -410,3 +410,33 @@ This is useful on scenarios where the APM server is behind a reverse proxy that 
 
 NOTE: If APM Server is deployed in an origin different than the page’s origin, you will need to
 <<configuring-cors, configure Cross-Origin Resource Sharing (CORS)>>.
+
+
+[function]
+[[transaction-context-callback]]
+==== `transactionContextCallback`
+
+* *Type:* Function
+* *Default:* `null`
+
+`transactionContextCallback` allows the agent to specify a function to be called when starting automatically instrumented transactions and spans and return
+context to be set as tags. This enables the agent to capture the context when instrumented events are fired from files which do not import the RUM agent library.
+
+The following example illustrates an example which captures the stack trace:
+
+[source,js]
+----
+var options = {
+  transactionContextCallback: () => {
+    let stack
+    try {
+      throw new Error('')
+    }
+    catch (error) {
+      stack = (error as Error).stack || ''
+    }
+    stack = stack.split('\n').map(function (line) { return line.trim(); })
+    return { stack };
+  }
+}
+----
